# easy-retry

./: LICENSE  README.md  pyproject.toml
.github/workflows/: mypy.yaml  pytest.yaml  ruff.yaml  testing.yaml
easy_retry/: __init__.py  main.py
tests/: test_sync_retry.py
